<resources>
    <string name="app_name">Gamer</string>
    <string name="facebook_app_id">1430014997291731</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notifications</string>
    <string name="title_activity_feed">Feed</string>
    <string name="group">Group Name</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_group">Group</string>
    <string name="hint">Group</string>
    <string name="button">Search</string>
    <string name="search">Search</string>
    <string name="comment">Post a comment</string>
    <string name="post">Add a Post</string>
    <string name="logout">Log out</string>
    <string name="post_hint">New Post</string>
    <string name="action_add_group">Add Group</string>
    <string name="new_group_name">Group Name</string>
    <string name="new_group_description">Description</string>
    <string name="add_group_button">Create Group</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_post">Add Post</string>
    <string name="add_post">Post</string>
    <string name="new_post_description">New Post</string>
    <string name="cancel_button">Cancel</string>
    <string name="join_group">Join Group</string>
    <string name="members">Members</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_posts">Your groups have no posts.</string>
    <string name="no_groups">You\'re not in any groups.</string>
    <string name="edit_profile">Edit</string>
    <string name="edit_bio">Biography</string>
    <string name="dob">Birthday: YYYY-MM-DD</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="Save">Save</string>
</resources>
