<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="co.johnnyli.gamer.Group">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"/>
    <!--<item-->
    <!--android:id="@+id/action_home"-->
    <!--android:title="@string/action_home"-->
    <!--app:showAsAction="never"/>-->
    <!--<item-->
    <!--android:id="@+id/action_notification"-->
    <!--android:title="@string/action_notification"-->
    <!--android:icon="@drawable/ic_stat_notifications_icon"-->
    <!--app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_group"
        android:title="@string/action_group"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="never"/>

    <!--<item-->
    <!--android:id="@+id/action_settings" android:title="@string/action_settings"-->
    <!--android:orderInCategory="100" app:showAsAction="never" />-->

</menu>
