<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>
        <EditText
            android:id="@+id/bio"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:minLines="3"
            android:gravity="top|left"
            android:maxLines="5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/edit_bio"
            android:scrollbars="vertical"
            android:background="@drawable/border"/>
        <Space
            android:layout_height="10dp"
            android:layout_width="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:hint="@string/gender"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/border"
            android:paddingTop="5dp"
            android:inputType="textCapSentences"
            android:paddingBottom="5dp"/>
        <Space
            android:layout_height="10dp"
            android:layout_width="1dp"/>
        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/dob"
            android:background="@drawable/border"/>
        <Space
            android:layout_height="10dp"
            android:layout_width="1dp"/>
        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/location"
            android:background="@drawable/border"/>
        <Space
            android:layout_height="10dp"
            android:layout_width="1dp"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Save"/>
    </LinearLayout>

</ScrollView>